--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,18 @@
 .read-the-docs {
   color: #888;
 }
+.selectContainer {
+  margin-bottom: 10px;
+}
+.select {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.buttonContainer {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.pageNumberButton {
+  margin-left: 5px;
+}
